<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ui.profile.ProfileFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:background="#2626"
            android:orientation="vertical">

            <ImageView
                android:layout_width="115dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/et_nom"
                android:layout_width="76dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/nom"
                android:textColor="#000"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="-112dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/et_email"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/adress_mail"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/et_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="+266 225 225"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/local" />

            <TextView
                android:id="@+id/et_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="adresse"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ticket" />

            <TextView
                android:id="@+id/et_ticket"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="Vos ticket"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp">

            <Button
                android:id="@+id/btn_modif"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="93dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/modifier_mes_cordonn_es"
                android:textColor="#000" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
